--- a/package.json
+++ b/package.json
@@ -4,15 +4,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma": "prisma"
   },
   "dependencies": {
+    "@prisma/client": "^3.11.0",
+    "@walletconnect/web3-provider": "^1.7.5",
+    "ethers": "^5.6.1",
     "next": "12.1.0",
+    "prisma": "^3.11.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.28.0",
+    "react-select": "^5.2.2",
+    "walletlink": "^2.5.0",
+    "web3modal": "^1.9.5"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "typescript": "^4.6.2"
   }
 }
