--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ethers": "^5.6.1",
     "next": "12.1.0",
     "next-auth": "^4.3.4",
+    "nextjs-cors": "^2.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.0",
