--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.0",
     "react-select": "^5.2.2",
+    "swr": "^1.3.0",
     "walletlink": "^2.5.0",
     "web3modal": "^1.9.5"
   },
