--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "prisma": "prisma"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.3",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.14.0",
     "@walletconnect/web3-provider": "^1.7.5",
     "atob": "^2.1.2",
+    "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "ethers": "^5.6.1",
     "next": "12.1.0",
