--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "atob": "^2.1.2",
     "cors": "^2.8.5",
     "ethers": "^5.6.1",
-    "next": "12.1.0",
+    "next": "^12.2.0",
     "next-auth": "^4.3.4",
     "nextjs-cors": "^2.1.1",
     "react": "17.0.2",
@@ -28,9 +28,12 @@
   "devDependencies": {
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.40",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.14",
     "prisma": "^3.15.1",
+    "tailwindcss": "^3.1.4",
     "typescript": "^4.6.2"
   }
 }
